--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=testUser
 spring.datasource.password=testPass
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+logging.path=/var/log/test
