--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>auth-course</artifactId>
+    <artifactId>secure-ecommerce-app</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>auth-course</name>
-    <description>Demo project for Spring Boot</description>
+    <name>secure-ecommerce-app</name>
+    <description>Secure Ecommerce Application</description>
 
     <properties>
         <java.version>1.8</java.version>
